set the application id on xdg_toplevel_v6_set_app_id

It seems Gtk+3 apps are calling this request, which is currently
ignored silently and causes an issue like crbug.com/866189.

Bug: 866189
Test: manually on device (see the bug for the reproducible steps)
Change-Id: I89f24da5a5bced1459b65cc1ff94f63debca90d2
Reviewed-on: https://chromium-review.googlesource.com/1147255
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Jun Mukai <mukai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577281}
Former-commit-id: 8f5bd147b2714e4ba0dce74cb80502cc6ac4a635